<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkWhite">
    <ImageView
        android:layout_width="300dp"
        android:layout_height="1000px"
        android:background="@drawable/umd"
        android:alpha="0.2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
         />

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/student_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp" />
        <EditText
            android:hint="@string/student_name_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/student_name" />
        <TextView
            android:text="@string/user_cell_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp" />
        <EditText
            android:hint="@string/user_cell_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType = "numberPassword"
            android:id="@+id/user_cell" />
        <TextView
            android:text="@string/class_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_class" />
        <TextView
            android:text="@string/assignment_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp" />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_assignment" />
        <TextView
            android:text="@string/problem_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp" />
        <EditText
            android:hint="@string/problem_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:id="@+id/problem" />
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:text="@string/check_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:id="@+id/check_in_button" />
            <Button
                android:text="@string/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancel_button" />
        </LinearLayout>>
    </LinearLayout>
    </ScrollView>
    </RelativeLayout>

