...

    <ImageButton
        android:background="@drawable/untitled2"
        android:layout_width="250px"
        android:layout_height="280px"
        android:layout_marginTop="30dp"
        android:id="@+id/student"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/textView"
        android:layout_marginStart="19dp" />

    <ImageButton
        android:background="@drawable/untitled3"
...
