<resources>
    <string name="app_name">QueueList</string>
    <string name="welcome">QueueList</string>
    <string name="getting_started">Click which one you are to get started.</string>
    <string name="students">Students</string>
    <string name="instructors">Instructors</string>
    <string name="student_name_label">Student Name</string>
    <string name="student_name_hint">Enter your name here</string>

    <string name="user_cell_label">Cell Number</string>
    <string name="user_cell_hint">Enter your Cell number here</string>

    <string name="class_label">Class</string>
    <string name="assignment_label">Assigment</string>
    <string name="problem_label">Problem</string>
    <string name="problem_hint">Please state the reason why you want to see a TA</string>
    <string name="check_in_button">Check-in</string>
    <string name="log_in_button">Login</string>
    <string name="cancel_button">Cancel</string>
    <string-array name="class_array">
        <item>None</item>
        <item>CMSC131</item>
        <item>CMSC132</item>
        <item>CMSC216</item>
    </string-array>
    <string-array name="assignment_array">
        <item>None</item>
        <item>Project1</item>
        <item>Project2</item>
        <item>Project3</item>
    </string-array>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="next">Next Student</string>
    <string name="next_student">Click next student button to get the next student that needs help</string>
    <string name="Refresh">refresh</string>
    <string name="addProject">Add Project</string>
    <string name="enterProjectName">Enter Project Name</string>
    <string name="title_student_list">Students</string>
    <string name="title_student_detail">Student Detail</string>
</resources>
