<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:id="@+id/projectName"
        android:hint="@string/enterProjectName"
        android:gravity="center"
        android:layout_marginTop="119dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/submit_project"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="96dp"
        android:layout_below="@+id/projectName"
        android:layout_centerHorizontal="true" />
</RelativeLayout>