...
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Student"
            android:id="@+id/add_student" />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"/>
...
            android:layout_height="wrap_content"
            android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="View Queue"
            android:id="@+id/viewQueue" />

        <Button
            android:id="@+id/addProject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addProject" />
...
