...
        android:id="@+id/textView4"
        android:layout_alignEnd="@+id/password" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_class"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/password"
        android:layout_alignEnd="@+id/password" />

    <Button
        android:id="@+id/submit"
...
